<!--
  ~ Copyright (C) 2016 Nishant Srivastava
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">QREader</string>
    <string name="intro_text">Point the camera view to a QR Code to read the information</string>
    <string name="restart_activity">Restart Activity</string>
    <string name="pick_from_gallery">Pick from Gallery</string>
    <string name="pick_from_camera">Pick from Camera</string>
    <string name="live_detection_mode">Live Detection Mode</string>
    <string name="flash">Flash</string>
    <string name="start_stop">Start/Stop</string>
</resources>
