<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2016 Nishant Srivastava
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_start_pause_preview"
        android:icon="@drawable/ic_action_pause"
        android:title="@string/start_stop"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_restart"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/restart_activity"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_gallery"
        android:icon="@drawable/ic_action_gallery"
        android:title="@string/pick_from_gallery"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_camera"
        android:icon="@drawable/ic_action_camera"
        android:title="@string/pick_from_camera"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_livedetection"
        android:icon="@drawable/ic_action_live"
        android:title="@string/live_detection_mode"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_flash"
        android:icon="@drawable/ic_action_flash_off"
        android:title="@string/flash"
        app:showAsAction="ifRoom" />

</menu>